--- a/assets/css/admin-portal.css
+++ b/assets/css/admin-portal.css
@@ -530,7 +530,8 @@
   overflow: hidden;
 }
 #adminStudentDetails .course-info {
-  margin: 0 15px;
+  margin: 0 1rem;
+  margin-bottom: 1rem;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
@@ -1014,6 +1015,10 @@
 #adminSessionManagement .table th:last-child,
 #adminSessionManagement .table td:last-child {
   width: 7rem;
+}
+#adminSessionManagement .table .name .teacher {
+  font-size: 0.8rem;
+  font-weight: var(--accent-font-weight);
 }
 
 /* session details */
@@ -1542,6 +1547,28 @@
 }
 
 /* teacher payments page */
+#adminTeacherPayment .statistic-box.total-due .currecy,
+#adminTeacherPayment .statistic-box.total-deposit .currecy {
+  font-size: 2rem;
+}
+#adminTeacherPayment .statistic-box.total-due {
+  background-color: rgb(255, 238, 248);
+}
+#adminTeacherPayment .statistic-box.total-due:hover {
+  background-color: rgb(255, 221, 241);
+}
+#adminTeacherPayment .statistic-box.total-due .statistic-value {
+  color: rgb(223, 0, 130);
+}
+#adminTeacherPayment .statistic-box.total-deposit {
+  background-color: rgb(247, 242, 255);
+}
+#adminTeacherPayment .statistic-box.total-deposit:hover {
+  background-color: rgb(237, 227, 253);
+}
+#adminTeacherPayment .statistic-box.total-deposit .statistic-value {
+  color: rgb(106, 0, 255);
+}
 #adminTeacherPayment .table th,
 #adminTeacherPayment .table td {
   padding: 1rem;
