--- a/assets/css/course-portal.css
+++ b/assets/css/course-portal.css
@@ -337,9 +337,9 @@
   margin-bottom: 1rem;
 }
 #courseStudentDetails .profile-image {
-  width: 100%;
-  max-width: 10rem;
-  max-height: 10rem;
+  width: 10rem;
+  height: 10rem;
+  object-fit: cover;
   border: var(--border);
   border-radius: 0.5rem;
 }
@@ -379,7 +379,6 @@
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
-  text-transform: capitalize;
   border: var(--border);
   background-color: var(--accent-color);
   color: #fff;
