--- a/assets/css/parent-portal.css
+++ b/assets/css/parent-portal.css
@@ -117,9 +117,9 @@
   justify-content: center;
 }
 #parentChildDetails .profile-image {
-  width: 100%;
-  max-width: 10rem;
-  max-height: 10rem;
+  width: 10rem;
+  height: 10rem;
+  object-fit: cover;
   border: var(--border);
   border-radius: 0.4rem;
   margin-top: 2rem;
